[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "start_gpt_plugin_template"
version = "0.0.2"
authors = [
  { name="khulnasoft", email="info@khulnasoft.com" },
]
description = "The template plugin for Start-GPT."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["abstract-singleton"]

[project.urls]
"Homepage" = "https://github.com/khulnasoft/Start-GPT"
"Bug Tracker" = "https://github.com/khulnasoft/Start-GPT"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = ""

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"